--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,14 @@
-kotlin.code.style = official
-ksp.incremental.intermodule = true
+# Gradle
+org.gradle.jvmargs = -Xmx4g -XX:MaxMetaspaceSize=2g
+org.gradle.parallel = true
 
+# Kotlin
+kotlin.native.ignoreDisabledTargets = true
+kotlin.incremental.multiplatform = true
+kotlin.parallel.tasks.in.project = true
 kotlin.mpp.enableGranularSourceSetsMetadata = true
 kotlin.native.enableDependencyPropagation = false
+kotlin.mpp.stability.nowarn=true
+
+# KSP
+ksp.incremental.intermodule = true
