--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -45,18 +45,18 @@ jobs:
       # Host only for MacOS / Windows
       - name: Check (macos / windows)
         if: matrix.os != 'ubuntu-latest'
-        run: ./gradlew hostOnlyTest
+        run: ./gradlew --stacktrace hostOnlyTest
         shell: bash
       - name: Upload (macos / windows)
         if: matrix.os != 'ubuntu-latest'
-        run: ./gradlew hostOnlyPublish -PgitRef=${{ github.ref }} -Psnapshot=true
+        run: ./gradlew --stacktrace hostOnlyPublish -PgitRef=${{ github.ref }} -Psnapshot=true
         shell: bash
       # Linux / JVM / JS
       - name: Check (ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: ./gradlew check
+        run: ./gradlew --stacktrace check
         shell: bash
       - name: Upload (ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: ./gradlew publishAllPublicationsToOssrhStagingRepository -PgitRef=${{ github.ref }} -Psnapshot=true
+        run: ./gradlew --stacktrace publishAllPublicationsToOssrhStagingRepository -PgitRef=${{ github.ref }} -Psnapshot=true
         shell: bash
