--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
 
   gradle-plugin:
     runs-on: ubuntu-latest
-    needs: build-upload
+    needs: [build-upload, drop-or-release]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
