--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -64,8 +64,8 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: ./gradlew --stacktrace check
         shell: bash
-        working-directory: tests-Jvm (ubuntu)
-      - name: Check plugin with Android
+        working-directory: tests-Jvm
+      - name: Check plugin with Android (ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: ./gradlew --stacktrace check
         shell: bash
