Update to Kotlin 1.7.10 & introducing test-helper-junit5 (fix #31)

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -64,12 +64,12 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: ./gradlew --stacktrace check
         shell: bash
-        working-directory: tests-Jvm
+        working-directory: tests-projects/tests-Jvm
       - name: Check plugin with Android (ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: ./gradlew --stacktrace check
         shell: bash
-        working-directory: tests-Android
+        working-directory: tests-projects/tests-Android
       - name: Upload (ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: ./gradlew --stacktrace publishAllPublicationsToOssrhStagingRepository -PgitRef=${{ github.ref }} -Psnapshot=true
