--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,12 +72,12 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: ./gradlew --stacktrace check
         shell: bash
-        working-directory: tests-Jvm
+        working-directory: tests-projects/tests-Jvm
       - name: Check plugin with Android (ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: ./gradlew --stacktrace check
         shell: bash
-        working-directory: tests-Android
+        working-directory: tests-projects/tests-Android
       - name: Upload (ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: ./gradlew --stacktrace publishAllPublicationsToOssrhStagingRepository -Porg.kodein.sonatype.repositoryId=${{ needs.create-staging-repository.outputs.repository_id }}
