Using Version Catalog & Project accessors.

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@ ksp.incremental.intermodule = true
 
 # Kodein
 org.kodein.no-default-junit = true
+
+# https://youtrack.jetbrains.com/issue/KT-55720
+kotlin.incremental.js.ir=false
