--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 buildConfig = "3.1.0"
+coroutines = "1.6.4"
+datetime = "0.4.0"
 javassist = "3.28.0-GA"
 kotlinPoet = "1.12.0"
 ksp = "1.8.0-1.0.8"
@@ -10,6 +12,8 @@ buildConfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildConfig
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 [libraries]
+coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "datetime" }
 javassist = { module = "org.javassist:javassist", version.ref = "javassist" }
 kotlinPoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version.ref = "kotlinPoet" }
 ksp-gradlePlugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
