--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 buildConfig = "3.1.0"
-coroutines = "1.6.4"
+coroutines = "1.7.0-RC"
 datetime = "0.4.0"
 javassist = "3.28.0-GA"
-kotlinPoet = "1.12.0"
-ksp = "1.8.10-1.0.9"
+kotlinPoet = "1.13.1"
+ksp = "1.8.20-1.0.11"
 objenesis = "3.2"
 
 [plugins]
