Support for android source-set layout version 2 (fixes #53)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,3 +57,8 @@ jobs:
         working-directory: tests-projects/tests-android-old
         run: ../../gradlew --stacktrace check
         shell: bash
+      - name: Check plugin with Android new layout (ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        working-directory: tests-projects/tests-android-new
+        run: ../../gradlew --stacktrace check
+        shell: bash
