--- a/tests-projects/tests-android-new/gradle.properties
+++ b/tests-projects/tests-android-new/gradle.properties
@@ -2,4 +2,4 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
 android.useAndroidX=true
 android.nonTransitiveRClass=true
-kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
