--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,11 @@ jobs:
         working-directory: tests-projects/tests-android-old
         run: ../../gradlew --stacktrace check
         shell: bash
+      - name: Check plugin with Android new layout (ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        working-directory: tests-projects/tests-android-new
+        run: ../../gradlew --stacktrace check
+        shell: bash
       - name: Upload (macos / windows)
         if: matrix.os != 'ubuntu-latest'
         run: ./gradlew --stacktrace hostOnlyPublish -Porg.kodein.sonatype.repositoryId=${{ needs.create-staging-repository.outputs.repository_id }}
