--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 buildConfig = "3.1.0"
-coroutines = "1.7.0-RC"
+coroutines = "1.7.3"
 datetime = "0.4.0"
 javassist = "3.29.2-GA"
-kotlinPoet = "1.13.1"
-ksp = "1.8.20-1.0.11"
+kotlinPoet = "1.14.2"
+ksp = "1.9.0-1.0.12"
 objenesis = "3.2"
 
 [plugins]
