--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,6 @@ org.gradle.parallel = true
 # KSP
 ksp.incremental.intermodule = true
 
-# Kodein
+# Kosi
 org.kodein.no-default-junit = true
+org.kodein.native.enableCrossCompilation=true
