--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   create-staging-repository:
-    uses: kosi-libs/kodein-internal-github-actions/create-nexus-staging-repository.yml@main
+    uses: kosi-libs/kodein-internal-github-actions/.github/workflows/create-nexus-staging-repository.yml@main
     secrets: inherit
 
   build-upload:
@@ -29,7 +29,7 @@ jobs:
   drop-or-release-staging-repository:
     needs: [create-staging-repository, build-upload]
     if: ${{ always() && needs.create-staging-repository.result == 'success' }}
-    uses: kosi-libs/kodein-internal-github-actions/create-nexus-staging-repository.yml@main
+    uses: kosi-libs/kodein-internal-github-actions/.github/workflows/drop-or-release-nexus-staging-repository.yml@main
     secrets: inherit
     with:
       repository-id: ${{ needs.create-staging-repository.outputs.repository-id }}
@@ -37,12 +37,12 @@ jobs:
 
   gradle-plugin:
     runs-on: ubuntu-latest
-    needs: [build-upload, drop-or-release]
+    needs: [build-upload, drop-or-release-staging-repository]
     steps:
       - name: Setup
         uses: kosi-libs/kodein-internal-github-actions/setup@main
         with:
-          with-konan: false
+          konan: false
       - name: Publish
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
