--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,5 +18,6 @@ javassist = { module = "org.javassist:javassist", version.ref = "javassist" }
 kotlinPoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version.ref = "kotlinPoet" }
 ksp-gradlePlugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 ksp-symbolProcessingApi = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
+ksp-symbolProcessing = { module = "com.google.devtools.ksp:symbol-processing", version.ref = "ksp" }
 objenesis = { module = "org.objenesis:objenesis", version.ref = "objenesis" }
 reflect = { module = "org.jetbrains.kotlin:kotlin-reflect" }
