--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -3,7 +3,7 @@ name: build and publish a snapshot
 on:
   push:
     branches:
-      - master
+      - main
       - 'snapshot/*'
       - 'kotlin-*'
     paths-ignore:
@@ -17,13 +17,14 @@ jobs:
   build-upload:
     runs-on: macOS-latest
     env:
-      SONATYPE_USERNAME: ${{ secrets.sonatype_username }}
-      SONATYPE_PASSWORD: ${{ secrets.sonatype_password }}
+      SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+      SONATYPE_PASSWORD: ${{ secrets.SONATYPE_TOKEN_PASSWORD }}
     steps:
       - name: Setup
         uses: kosi-libs/kodein-internal-github-actions/setup@main
       - name: Check
-        uses: ./.github/actions/check
+        run: ./gradlew --stacktrace --scan :tests-projects:check
+        shell: bash
       - name: Upload
-        run: ./gradlew --stacktrace --scan publishAllPublicationsToOssrhStagingRepository -PgitRef=${{ github.ref }} -Psnapshot=true
+        run: ./gradlew --stacktrace --scan :mockmp:publishAllPublicationsToOssrhStagingRepository -PgitRef=${{ github.ref }} -Psnapshot=true
         shell: bash
