--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,11 @@
 build/
 out/
 .gradletasknamecache
-*local.properties
+tests-projects/local.properties
 
 # JS
 node_modules/
 package-lock.json
+
+# Kotlin
+.kotlin/
